[tool.poetry]
name = "lnd-invoice-records-stream"
version = "0.1.0"
description = ""
authors = ["Alecks Gates <agates@mail.agates.io>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.40.0"
googleapis-common-protos = "^1.53.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
grpcio-tools = "^1.40.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
